--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -16,18 +16,18 @@
     <h1 style="font-size: 4rem;">Sorting Visualiser</h1>
     <header class="header">
         <nav class="navbar">
-            <a href="#" class="nav-logo" style="text-decoration: none;">Home</a>
+            <a href="" class="nav-logo text-success bg-light rounded p-3" style="text-decoration: none;">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link">About</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="" class="nav-link">Searching</a>
+                    <a href="/searching/index.html" class="nav-link">Searching</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="" class="nav-link">Sorting</a>
+                    <a href="/sorting/index.html" class="nav-link">Sorting</a>
                 </li>
 
                 <li class="nav-item">
@@ -41,14 +41,29 @@
             </div>
         </nav>
     </header>
-    <main class="main-content">
-        <div class="main-item">
-            <img src="Inkedsearching_algorithms1(resized).jpg" alt="">
-            <img src="70d6f4e10e2badb5ef394f00c17ad2bc1c14f6e7.jpg" alt="">
+    <div class="container">
+        <div class="box">
+            <div class="imgBox">
+                <img src="Inkedsearching_algorithms1(resized).jpg" alt="">
+                <div class="details">
+                    <div class="content">
+                        <button></button>
+                    </div>
+                </div>
+            </div>
         </div>
-    </main>
+        <div class="box">
+            <div class="imgBox">
+                <img src="70d6f4e10e2badb5ef394f00c17ad2bc1c14f6e7.jpg" alt="">
+                <div class="details">
+                    <div class="content">
+                        <button></button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <script src="app.js"></script>
+        <script src="app.js"></script>
 </body>
 
 </html>
