--- a/sorting/index.html
+++ b/sorting/index.html
@@ -39,6 +39,12 @@
     </header>
 
     <div id="bars" class="flex-container"></div>
+    <br>
+
+    <footer>
+        <button type="button" class=" btn btn-outline-primary btn-dark"><a id="searching-toggle"
+                href="/searching/index.html">Searching</a></button>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
