--- a/searching/index.html
+++ b/searching/index.html
@@ -16,29 +16,28 @@
 <body>
     <div id="root">
         <div class="outer-wrapper">
+            <h1 class="title">Searching Visualizer</h1>
             <!-- nav bar section -->
             <nav class="navbar container shadow">
                 <!-- navbar left section -->
                 <div class="nav-left-section">
-                    <h2><a href="">Searching</a></h2>
+                    <h2><a class="btn" id="sorting-toggle" href="/sorting/index.html">Sorting</a></h2>
                 </div>
                 <!-- navbar middle section -->
                 <div class="nav-middle-section">
                     <div class="linear-wrapper search-btn">
-                        <button class="linear-btn btn" id="linear-search">
+                        <button class="btn btn-outline-primary btn-dark" id="linear-search">
                             Linear Search
                         </button>
                     </div>
                     <div class="binary-wrapper search-btn">
-                        <button class="binary-btn btn" id="binary-search">
+                        <button class="btn btn-outline-primary btn-dark" id="binary-search">
                             Binary Search
                         </button>
                     </div>
                 </div>
-                <!-- navbar right section -->
-                <div class="nav-right-section">
-                    <h2><a href="">Visualizer</a></h2>
-                </div>
+                <!-- navbar right section-->
+                <div class="nav-right-section"></div>
             </nav>
 
             <!-- main body section  -->
